--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-06  buliabyak@users.sf.net
+
+	* fr.po: update from f.rodrigo@tuxfamily.org
+
 2004-04-04  buliabyak@users.sf.net
 
 	* hu.po: another update from Arpad Biro
