--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-07  buliabyak@users.sf.net
+
+	* ru.po: update from Alex Remizov and myself
+
 2004-04-06  buliabyak@users.sf.net
 
 	* fr.po: update from f.rodrigo@tuxfamily.org
